--- a/sass/layout/_ads.scss
+++ b/sass/layout/_ads.scss
@@ -33,7 +33,7 @@ body {
         }
 
         &.fadeout {
-          animation: fadeOutUpScroll 500ms;
+          animation: fadeOutUp 500ms;
           opacity: 0;
         }
 
